<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <!-- / 基本情報 -->
  <groupId>com.github.nilcy</groupId>
  <artifactId>uuo</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <dependencies />
  <dependencyManagement />
  <modules>
    <module>uuo-framework</module>
    <module>uuo-application</module>
  </modules>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
    <javaee-api.version>7.0</javaee-api.version>
    <javaee-web-api.version>7.0</javaee-web-api.version>
    <junit.version>4.11</junit.version>
    <glassfish-embedded-all.version>4.0</glassfish-embedded-all.version>
    <postgresql.version>9.2-1003-jdbc4</postgresql.version>
  </properties>
  <!-- / ビルド設定 -->
  <build>
    <defaultGoal>package</defaultGoal>
    <directory>target</directory>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.7</version>
        </plugin>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.8</version>
        </plugin>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.4.1</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>aspectj-maven-plugin</artifactId>
                    <versionRange>[1.2,)</versionRange>
                    <goals>
                      <goal>compile</goal>
                      <goal>test-compile</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
        <executions>
          <execution>
            <id>default-clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9</version>
        <executions>
          <execution>
            <phase>deploy</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <locale>en</locale>
          <author>true</author>
          <show>private</show>
          <linksource>true</linksource>
          <detectLinks>false</detectLinks>
          <aggregate>false</aggregate>
          <links>
            <link>http://docs.oracle.com/javase/7/docs/api/</link>
            <link>http://docs.oracle.com/javaee/7/api/</link>
            <link>http://junit-team.github.io/junit/javadoc/latest/</link>
            <link>http://hamcrest.org/JavaHamcrest/javadoc/1.3/</link>
          </links>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <compilerArguments>
            <endorseddirs>${endorsed.dir}</endorseddirs>
            <Xlint />
            <Xlint:-path />
            <verbose />
          </compilerArguments>
          <showDeprecation>true</showDeprecation>
        </configuration>
        <executions>
          <execution>
            <id>default-testCompile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
          <execution>
            <id>default-compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>2.6</version>
        <executions>
          <execution>
            <id>default-resources</id>
            <phase>process-resources</phase>
            <goals>
              <goal>resources</goal>
            </goals>
          </execution>
          <execution>
            <id>default-testResources</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>testResources</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.15</version>
        <configuration>
          <forkCount>1</forkCount>
          <reuseForks>true</reuseForks>
          <argLine>-Xmx512m -XX:MaxPermSize=128m -XX:-UseSplitVerifier</argLine>
          <testFailureIgnore>false</testFailureIgnore>
          <systemProperties>
            <property>
              <name>net.sourceforge.cobertura.datafile</name>
              <value>target/cobertura/cobertura.ser</value>
            </property>
            <property>
              <name>java.util.logging.config.file</name>
              <value>${project.build.testOutputDirectory}/logging.properties</value>
            </property>
            <property>
              <name>derby.stream.error.file</name>
              <value>${project.build.directory}/derby.log</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-install-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <id>default-install</id>
            <phase>install</phase>
            <goals>
              <goal>install</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.7</version>
        <executions>
          <execution>
            <id>default-deploy</id>
            <phase>deploy</phase>
            <goals>
              <goal>deploy</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.3</version>
        <executions>
          <execution>
            <id>default-site</id>
            <phase>site</phase>
            <goals>
              <goal>site</goal>
            </goals>
          </execution>
          <execution>
            <id>default-deploy</id>
            <phase>site-deploy</phase>
            <goals>
              <goal>deploy</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <locales>en</locales>
          <dependencies>
            <dependency>
              <groupId>org.apache.maven.doxia</groupId>
              <artifactId>doxia-module-markdown</artifactId>
              <version>1.4</version>
            </dependency>
          </dependencies>
          <reportPlugins>
            <plugin>
              <artifactId>maven-project-info-reports-plugin</artifactId>
              <version>2.7</version>
              <configuration>
                <dependencyDetailsEnabled>true</dependencyDetailsEnabled>
                <dependencyLocationsEnabled>true</dependencyLocationsEnabled>
              </configuration>
              <reportSets>
                <reportSet>
                  <reports>
                    <report>index</report>
                    <report>summary</report>
                    <report>license</report>
                    <report>project-team</report>
                    <report>mailing-list</report>
                    <report>dependencies</report>
                    <report>dependency-convergence</report>
                    <report>dependency-management</report>
                    <report>issue-tracking</report>
                    <report>scm</report>
                    <report>cim</report>
                    <report>plugin-management</report>
                    <report>plugins</report>
                  </reports>
                </reportSet>
              </reportSets>
            </plugin>
            <plugin>
              <artifactId>maven-jxr-plugin</artifactId>
              <version>2.3</version>
              <configuration>
                <aggregate>false</aggregate>
                <!-- <inputEncoding>${maven.compiler.encoding}</inputEncoding> -->
                <!-- <outputEncoding>UTF-8</outputEncoding> -->
              </configuration>
            </plugin>
            <plugin>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>2.9</version>
            </plugin>
            <plugin>
              <artifactId>maven-surefire-report-plugin</artifactId>
              <version>2.15</version>
              <reportSets>
                <reportSet>
                  <reports>
                    <report>report-only</report>
                  </reports>
                </reportSet>
              </reportSets>
            </plugin>
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>cobertura-maven-plugin</artifactId>
              <version>2.5.2</version>
              <configuration>
                <formats>
                  <format>html</format>
                </formats>
              </configuration>
            </plugin>
            <plugin>
              <artifactId>maven-checkstyle-plugin</artifactId>
              <version>2.10</version>
              <configuration>
                <configLocation>uuo-framework/uuo-framework-coding/src/main/config/Checkstyle.xml</configLocation>
              </configuration>
            </plugin>
          </reportPlugins>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>dbunit-maven-plugin</artifactId>
        <version>1.0-beta-3</version>
        <dependencies>
          <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
          </dependency>
          <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derbyclient</artifactId>
            <version>10.10.1.1</version>
          </dependency>
          <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.2-FINAL</version>
          </dependency>
        </dependencies>
        <configuration>
          <dataTypeFactoryName>org.dbunit.ext.postgresql.PostgresqlDataTypeFactory</dataTypeFactoryName>
          <driver>org.postgresql.Driver</driver>
          <url>jdbc:postgresql://localhost/uuo</url>
          <username>uuo</username>
          <password>happyhacking</password>
          <type>CLEAN_INSERT</type>
          <format>xls</format>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <outputDirectory>target/site</outputDirectory>
  </reporting>
  <!-- / プロジェクト情報 -->
  <name>UUO / Root Module</name>
  <description>UUO (you-you-oh) [short for &quot;Un-Used Operation&quot;]</description>
  <url>http://nilcy.github.io/uuo/maven/site/</url>
  <inceptionYear>2013</inceptionYear>
  <licenses>
    <license>
      <name>GNU GENERAL PUBLIC LICENSE Version 3</name>
      <url>http://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
      <distribution>repo</distribution>
      <comments>The GNU General Public License is a free, copyleft license for software and other kinds of works.</comments>
    </license>
  </licenses>
  <organization>
    <name>nilcy</name>
    <url>https://github.com/nilcy</url>
  </organization>
  <developers>
    <developer>
      <id>nilcy</id>
      <name>Takehiro Shimokawa</name>
      <email>nilcy@mac.com</email>
      <roles>
        <role>SPONSOR</role>
        <role>DIRECTOR</role>
        <role>CREATOR</role>
        <role>EDITOR</role>
        <role>AUDITOR</role>
        <role>READER</role>
      </roles>
      <timezone>-9</timezone>
    </developer>
  </developers>
  <contributors>
    <contributor />
  </contributors>
  <!-- / 環境設定 -->
  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/nilcy/uuo/issues</url>
  </issueManagement>
  <ciManagement />
  <mailingLists>
    <mailingList />
  </mailingLists>
  <scm>
    <connection>scm:git:https://github.com/nilcy/uuo.git</connection>
    <url>https://github.com/nilcy/uuo</url>
  </scm>
  <prerequisites>
    <maven>3.1.0</maven>
  </prerequisites>
  <repositories />
  <pluginRepositories />
  <distributionManagement>
    <repository>
      <id>release-repository</id>
      <url>file:///home.nilcy/git/uuo-pages/maven/release</url>
    </repository>
    <snapshotRepository>
      <id>snapshot-repository</id>
      <url>file:///home.nilcy/git/uuo-pages/maven/snapshot/</url>
    </snapshotRepository>
    <site>
      <id>site-repository</id>
      <url>file:///home.nilcy/git/uuo-pages/maven/site</url>
    </site>
  </distributionManagement>
  <profiles>
    <profile />
  </profiles>
</project>